*SVN*

* Deprecation: remove pagination. Install the classic_pagination plugin for forward compatibility, or move to the superior will_paginate plugin.  #8157 [Josh Peek]

* Action caching is limited to GET requests returning 200 OK status.  #3335 [tom@craz8.com, halfbyte, Dan Kubb, Josh Peek]

* Improve Text Helper test coverage.  #7274 [Rob Sanheim, Josh Peek]

* Improve Action View test coverage.  #7241, #7243, #7244 [Rich Collins]

* Resources: url_for([parent, child]) generates /parents/1/children/2 for the nested resource. Likewise with the other simply helpful methods like form_for and link_to.  #6432 [mhw, Jonathan Vaught, lotswholetime]

* Assume html format when rendering partials in RJS. #8076 [Rick]

* Don't double-escape url_for in views.  #8144 [Rich Collins, Josh Peek]

* Allow JSON-style values for the :with option of observe_field.  Closes #8557 [kommen]

* Remove RAILS_ROOT from backtrace paths.  #8540 [Tim Pope]

* Routing: map.resource :logo routes to LogosController so the controller may be reused for multiple nestings or namespaces.  [Jeremy Kemper]

* render :partial recognizes Active Record associations as Arrays.  #8538 [kamal]

* Routing: drop semicolon and comma as route separators.  [Jeremy Kemper]

* request.remote_ip understands X-Forwarded-For addresses with nonstandard whitespace.  #7386 [moses]

* Don't prepare response when rendering a component.  #8493 [jsierles]

* Reduce file stat calls when checking for template changes.  #7736 [alex]

* Added custom path cache_page/expire_page parameters in addition to the options hashes [DHH]. Example:

    def index
      caches_page(response.body, "/index.html")
    end

* Action Caching speedup.  #8231 [skaes]

* Wordsmith resources documentation.  #8484 [marclove]

* Fix syntax error in code example for routing documentation. #8377. [norbert]
