@@ -1,5 +1,7 @@
 *SVN*
 
+* Tolerate missing content type on multipart file uploads. Fix for Safari 3.  [Jeremy Kemper]
+
 * Deprecation: remove pagination. Install the classic_pagination plugin for forward compatibility, or move to the superior will_paginate plugin.  #8157 [Josh Peek]
 
 * Action caching is limited to GET requests returning 200 OK status.  #3335 [tom@craz8.com, halfbyte, Dan Kubb, Josh Peek]
